--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
+  all: initial;
 }
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -18,8 +20,6 @@ body {
   max-height: 756px;
   width: 100%;
   background-color: lightgray;
-  z-index: 0;
-  position: absolute;
   /* выше установили ограничения для секции */
 }
 
@@ -28,40 +28,46 @@ body {
   height: 568px;
   width: 568px;
   background-color: rgb(0, 119, 255);
+  position: relative;
   z-index: 0;
-  position: absolute;
-  right: 0;
-  bottom: 120px;
+  top: -680px;
+  right: -250px;
 }
 
 .header__image {
-  height: 600px;
-  width: 600px;
-  background-image: src("./images/ltwo_again.png");
-  background-color: aqua;
-  position: absolute;
+  height: 700px;
+  width: 700px;
+  background-image: url("/images/two_again.png");
+  background-size: cover;
+  position: relative;
   z-index: 1;
+  top: 55px;
+  right: -115px;
 }
 
 .header__logo {
   min-width: 228px;
   min-height: 32px;
-  position: absolute;
-  top: 30px;
-  left: 64px;
   background-image: url("/images/logo_place_header.svg");
+  background-repeat: no-repeat;
 }
 
-.header__title {
+.header__title_first {
   font-size: 60px;
   font-weight: 500;
+  margin-bottom: 0;
+  margin-top: 100px;
+}
+
+.header__title_second {
+  font-size: 60px;
+  font-weight: 500;
+  margin-top: 0;
+  margin-bottom: 100px;
 }
 
 .header__end {
   font-size: 24px;
-  position: absolute;
-  left: 64px;
-  bottom: 20px;
 
 }
 
@@ -77,5 +83,27 @@ body {
   background-color: aqua;
   width: 100%;
   height: 60vh;
-  min-height: 300px ;
+  min-height: 50vh;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-basis {
+  flex-basis: content;
+}
+
+.div {
+  background-color: blueviolet;
+}
+
+.justify-content-space-around {
+  justify-content: space-around;
 }
