--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  all: initial;
 }
 
 .page {
@@ -19,7 +18,28 @@ body {
   min-height: 600px;
   max-height: 756px;
   width: 100%;
-  background-color: lightgray;
+  background-color: rgb(233, 232, 232);
+  z-index: 0;
+  /* выше установили ограничения для секции */
+}
+
+.header__left {
+  height: 100vh;
+  min-height: 300px;
+  max-height: 756px;
+  width: 50%;
+  background-color: background-color: rgb(233, 232, 232);
+  justify-content: center;
+  /* выше установили ограничения для секции */
+}
+
+.header__right {
+  height: 100vh;
+  min-height: 300px;
+  max-height: 756px;
+  width: 50%;
+  z-index: -3;
+  background-color: rgb(233, 232, 232);
   /* выше установили ограничения для секции */
 }
 
@@ -27,22 +47,23 @@ body {
 .header__square-pic {
   height: 568px;
   width: 568px;
-  background-color: rgb(0, 119, 255);
-  position: relative;
-  z-index: 0;
-  top: -680px;
-  right: -250px;
+  background-color: rgb(0, 132, 255);
+  position: absolute;
+  z-index: -2;
+  top: 64px;
+  right: 0;
+  ;
 }
 
 .header__image {
-  height: 700px;
-  width: 700px;
+  height: 608px;
+  width: 765px;
   background-image: url("/images/two_again.png");
   background-size: cover;
-  position: relative;
-  z-index: 1;
-  top: 55px;
-  right: -115px;
+  position: absolute;
+  z-index: -1;
+  right: 0;
+  bottom: 0;
 }
 
 .header__logo {
@@ -50,25 +71,36 @@ body {
   min-height: 32px;
   background-image: url("/images/logo_place_header.svg");
   background-repeat: no-repeat;
+  position: absolute;
+  left: 64px;
+  top: 30px;
 }
 
-.header__title_first {
-  font-size: 60px;
-  font-weight: 500;
-  margin-bottom: 0;
-  margin-top: 100px;
+.header__title {
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: 700;
+  width: 730px;
+  margin-left: 64px;
 }
 
-.header__title_second {
-  font-size: 60px;
-  font-weight: 500;
-  margin-top: 0;
-  margin-bottom: 100px;
-}
 
 .header__end {
-  font-size: 24px;
+  font-size: 18px;
+  line-height: 25px;
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  width: 388px;
+}
 
+.header__end_link {
+  text-decoration: none;
+  color: blue;
+}
+
+.header__end_link:hover {
+  color: red;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -96,14 +128,10 @@ body {
   flex-direction: column;
 }
 
-.flex-basis {
-  flex-basis: content;
+.border-content {
+  border: 1px solid red;
 }
 
-.div {
-  background-color: blueviolet;
-}
-
-.justify-content-space-around {
-  justify-content: space-around;
+.position-relative {
+  position: relative;
 }
