--- a/styles/style.css
+++ b/styles/style.css
@@ -74,8 +74,7 @@ body {
   background-repeat: no-repeat;
 }
 
-.header__logo_header
-{
+.header__logo_header {
   position: absolute;
   left: 64px;
   top: 30px;
@@ -98,7 +97,7 @@ body {
 
 .header__end_link {
   text-decoration: none;
-  color: blue;
+  color: rgb(119, 119, 243);
 }
 
 .header__end_link:hover {
@@ -106,10 +105,35 @@ body {
 }
 
 .description {
-  background-color: aquamarine;
+  background-color: white;
   width: 100%;
-  height: 400px;
-  min-width: 400px;
+  height: 540px;
+  min-width: 784px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.description__main {
+  width: 80%;
+  height: 340px;
+  min-width: 784px;
+}
+
+.description_brief {
+  width: 175px;
+  font-size: 18px;
+  line-height: 1.2;
+  padding-right: 80px;
+  margin-top: 0;
+  color: rgb(119, 119, 243);
+}
+
+.description_main-text {
+  box-sizing: content-box;
+  min-height: 340px;
+  height: 340px;
+  justify-content: space-between;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -189,6 +213,11 @@ body {
   line-height: 30px;
 }
 
+.text-style-1 {
+  font-size: 24px;
+  line-height: 34px;
+}
+
 .flex-row {
   display: flex;
   flex-direction: row;
@@ -212,10 +241,25 @@ body {
 }
 
 .title__footer {
- font-weight: 500;
- margin-left: 40px;
+  font-weight: 500;
+  margin-left: 40px;
 }
 
 .no-bullets {
   list-style: none;
+}
+
+.paragraph {
+  font-size: 24px;
+  line-height: 34px;
+  margin: 0 auto 0 auto;
+}
+
+.paragraph-span {
+  font-size: 24px;
+  line-height: 34px;
+}
+
+.span-solid {
+  font-weight: 700;
 }
