--- a/styles/style.css
+++ b/styles/style.css
@@ -136,6 +136,74 @@ body {
   justify-content: space-between;
 }
 
+.digits {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 800px;
+  min-height: 800px;
+  border: 1px solid red;
+}
+
+.table-style {
+  width: 1100px;
+  min-width: 1100px;
+  height: 500px;
+  border: 1px solid red;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: end;
+}
+
+.section-title-style {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 700;
+  border: 1px solid red;
+  height: 70px;
+  min-height: 70px;
+  width: 60%;
+  padding-top: ;
+}
+
+.section-subtitle-style {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 300;
+  border: 1px solid red;
+  width: 60%;
+  height: 30px;
+  min-height: 30px;
+}
+
+.cell {
+  border: 1px solid red;
+  width: 250px;
+  min-width: 250px;
+  height: 180px;
+  max-height: 180px;
+}
+
+.cell__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.cell__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: 100;
+  padding-top: 20px;
+}
+
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
@@ -262,4 +330,9 @@ body {
 
 .span-solid {
   font-weight: 700;
+}
+
+.flex-center {
+  justify-content: center;
+  align-items: center;
 }
