--- a/styles/style.css
+++ b/styles/style.css
@@ -179,6 +179,7 @@ body {
   min-width: 250px;
   height: 180px;
   max-height: 180px;
+  border: 1px solid red;
 }
 
 .cell__heading {
@@ -195,6 +196,11 @@ body {
 }
 
 .feynman {
+  background-color: #f2f2f2;
+  width: 100%;
+}
+
+.feynman-main {
   width: 100%;
   height: 800px;
   position: relative;
@@ -246,8 +252,23 @@ body {
   top: 50%;
 }
 
+.kaufman {
+  color: white;
+  display: flex;
+  width: 100%;
+  height: 750px;
+  align-items: center;
+  justify-content: center;
+  background-color: #1f1f1f;
+}
 
-
+.kaufman-main {
+  width: 100%;
+  height: 650px;
+  border: 1px solid red;
+  position: relative;
+  z-index: 2;
+}
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
@@ -255,6 +276,31 @@ body {
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  border: 1px solid red;
+  height: 145px;
+  position: relative;
+  z-index: 1;
+}
+
+.table-style_dark {
+  width: 1100px;
+  min-width: 1100px;
+  height: 500px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border: 1px solid red;
+}
+
+.kaufman-triangle {
+  background-image: url("/images/kaufman-triangle.svg");
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  z-index: 1;
+  bottom: -100%;
+  left: -100%;
+
+
 }
 
 .footer {
@@ -266,7 +312,7 @@ body {
   align-items: center;
   justify-content: center;
   color: white;
-  background-color: rgba(0, 0, 0, 0.857);
+  background-color: #1f1f1f;
 }
 
 .footer__main {
