--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,14 @@
-body {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
+  padding: 0;
+  font-size: inherit;
+  font-weight: inherit;
+  line-height: inherit;
 }
 
 .page {
@@ -23,17 +32,17 @@ body {
   /* выше установили ограничения для секции */
 }
 
-.header__left {
+.header__main_position_left {
   height: 100vh;
   min-height: 300px;
   max-height: 756px;
   width: 50%;
-  background-color: background-color: rgb(233, 232, 232);
+  background-color: rgb(233, 232, 232);
   justify-content: center;
   /* выше установили ограничения для секции */
 }
 
-.header__right {
+.header__main_position_right {
   height: 100vh;
   min-height: 300px;
   max-height: 756px;
@@ -51,7 +60,7 @@ body {
   background-size: cover;
   position: absolute;
   z-index: -2;
-  top: 64px;
+  bottom: 124px;
   right: 0;
   ;
 }
@@ -74,7 +83,7 @@ body {
   background-repeat: no-repeat;
 }
 
-.header__logo_header {
+.header__logo_position {
   position: absolute;
   left: 64px;
   top: 30px;
@@ -88,15 +97,11 @@ body {
   margin-left: 64px;
 }
 
-.header__end {
+.header__content {
   position: absolute;
   left: 64px;
   bottom: 30px;
   width: 388px;
-}
-
-.header__end_link:hover {
-  color: red;
 }
 
 .description {
@@ -115,30 +120,35 @@ body {
   min-width: 784px;
 }
 
-.description_brief {
+.description__brief {
   width: 175px;
   font-size: 18px;
   line-height: 1.2;
-  padding-right: 80px;
+  padding-right: 150px;
   margin-top: 0;
   color: rgb(119, 119, 243);
 }
 
-.description_main-text {
-  box-sizing: content-box;
-  min-height: 340px;
-  height: 340px;
-  justify-content: space-between;
+.description__main_text {
+  width: 100%;
+  min-height: 400px;
+  height: 400px;
 }
 
 .digits {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
-  height: 800px;
-  min-height: 800px;
+  height: 700px;
+  min-height: 700px;
 }
+
+.digits__main {
+  justify-content: center;
+  align-items: center;
+}
+
 
 .table-style {
   width: 1100px;
@@ -179,7 +189,6 @@ body {
   min-width: 250px;
   height: 180px;
   max-height: 180px;
-  border: 1px solid red;
 }
 
 .cell__heading {
@@ -200,16 +209,15 @@ body {
   width: 100%;
 }
 
-.feynman-main {
+.feynman__main {
   width: 100%;
   height: 800px;
   position: relative;
   top: 100px;
   background-color: #f2f2f2;
-
 }
 
-.feynman-image {
+.feynman__image {
   width: 867px;
   height: 637px;
   background-image: url("/images/feynman.png");
@@ -219,7 +227,7 @@ body {
   z-index: 1;
 }
 
-.feynman-title {
+.feynman__title {
   width: 648px;
   font-size: 120px;
   line-height: 1.15;
@@ -232,7 +240,7 @@ body {
   text-align: center;
 }
 
-.feynman-subtitle {
+.feynman__subtitle {
   font-size: 36px;
   line-height: 51px;
   font-weight: lighter;
@@ -243,7 +251,7 @@ body {
   z-index: 2;
 }
 
-.feynman-info {
+.feynman__info {
   font-size: 36px;
   line-height: 51px;
   font-weight: lighter;
@@ -256,55 +264,55 @@ body {
   color: white;
   display: flex;
   width: 100%;
-  height: 750px;
+  height: 860px;
   align-items: center;
   justify-content: center;
   background-color: #1f1f1f;
-}
-
-.kaufman-main {
-  width: 100%;
-  height: 650px;
-  border: 1px solid red;
   position: relative;
   z-index: 2;
+  overflow: hidden;
+}
+
+.kaufman__main {
+  width: 100%;
+  height: 650px;
+  position: relative;
+  z-index: 2;
+  justify-content: center;
+  align-items: center;
+
 }
 
 /* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
+.kaufman__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
-  border: 1px solid red;
   height: 145px;
   position: relative;
-  z-index: 1;
+  z-index: 2;
 }
 
-.table-style_dark {
+.kaufman__table_style_dark {
   width: 1100px;
   min-width: 1100px;
   height: 500px;
   flex-wrap: wrap;
   justify-content: space-between;
-  border: 1px solid red;
 }
 
-.kaufman-triangle {
+.kaufman__triangle {
   background-image: url("/images/kaufman-triangle.svg");
   width: 877px;
   height: 877px;
   position: absolute;
-  z-index: 1;
-  bottom: -100%;
-  left: -100%;
-
-
+  z-index: -1;
+  right: -210px;
+  top: 0;
 }
 
 .footer {
-  background-color: aqua;
   width: 100%;
   height: 300px;
   min-height: 300px;
@@ -353,7 +361,7 @@ body {
   color: white;
 }
 
-.footer-image-overlay:hover {
+.footer__image_overlay:hover {
   background-color: red;
   border-radius: 30%;
 }
@@ -387,10 +395,6 @@ body {
   flex-direction: column;
 }
 
-.border-content {
-  border: 1px solid red;
-}
-
 .position-relative {
   position: relative;
 }
@@ -414,21 +418,20 @@ body {
   margin: 0 auto 0 auto;
 }
 
-.paragraph-span {
+.paragraph__span {
   font-size: 24px;
   line-height: 34px;
 }
 
-.span-solid {
+.paragraph__span_solid {
   font-weight: 700;
-}
-
-.flex-center {
-  justify-content: center;
-  align-items: center;
 }
 
 .link {
   text-decoration: none;
   color: rgb(119, 119, 243);
+}
+
+.link:hover {
+  color: red;
 }
